--- a/assets/styles/vote.css
+++ b/assets/styles/vote.css
@@ -61,7 +61,7 @@
     height: 80%;
 }
 
-.subject-title {
+.subject-title-vote {
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 600;
