add navigation between project and vote

--- a/assets/styles/subject.css
+++ b/assets/styles/subject.css
@@ -1,7 +1,5 @@
-.title {
+.head-title {
     margin-left: 50px;
-    width: 563px;
-    height: 63px;
 
     font-style: normal;
     font-weight: 600;
