--- a/assets/styles/vote.css
+++ b/assets/styles/vote.css
@@ -15,6 +15,7 @@
 }
 
 .box-vote {
+    overflow: auto;
     margin-right: 32px;
     box-sizing: border-box;
 
@@ -30,7 +31,6 @@
     margin: 16px;
     box-sizing: border-box;
 
-    position: absolute;
     width: 40px;
     height: 40px;
 
@@ -125,9 +125,6 @@
     margin: 8px;
     box-sizing: border-box;
 
-    width: 200px;
-    height: 60px;
-
     background: #498CB3;
     border: 1px solid #498CB3;
     border-radius: 30px;
@@ -140,4 +137,29 @@
     text-align: center;
 
     color: #FFFFFF;
+}
+
+.btn-option {
+    margin: 8px;
+    box-sizing: border-box;
+
+    background: #498CB3;
+    border: 1px solid #498CB3;
+    border-radius: 30px;
+
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 39px;
+    text-align: center;
+
+    color: #FFFFFF;
+}
+
+.inputOption{
+    margin: 8px;
+    box-sizing: border-box;
+    border-radius: 30px;
+    border: 1px solid #498CB3;
 }
