--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Mon projet Symfony/Vuejs</title>
+        <title>Doovot</title>
         {{ encore_entry_link_tags('app') }}
 
         {{ encore_entry_script_tags('app') }}
