--- a/assets/styles/subject.css
+++ b/assets/styles/subject.css
@@ -41,8 +41,10 @@
     border-radius: 30px;
 }
 
-.img {
+.img-dashboard {
     margin: 8px;
+    height: 50%;
+    width: 100%;
 }
 
 .subject-title {
@@ -56,4 +58,34 @@
     text-align: center;
 
     color: #498CB3;
+}
+
+.add-subject {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+
+    background: #FFFFFF;
+}
+
+.add-title {
+    height: 100%;
+    margin-top: 32px;
+    padding-top: 20px;
+
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 29px;
+    text-align: center;
+
+    color: #498CB3;
+}
+
+.inputSubject {
+    margin: 8px;
+    box-sizing: border-box;
+    border-radius: 30px;
+    border: 1px solid #498CB3;
 }
